[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/score_screen/score_test.gd" type="Script" id=1]
[ext_resource path="res://arts/menus/score.jpg" type="Texture" id=2]
[ext_resource path="res://fonts/PaperCuts/papercuts.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]

font/size = 35
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]

font/size = 70
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]

font/size = 45
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[node name="score_test" type="Node2D"]

script/script = ExtResource( 1 )

[node name="TextureFrame" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 400.0
texture = ExtResource( 2 )
stretch_mode = 0

[node name="return_button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 42.0
margin/top = 303.0
margin/right = 322.0
margin/bottom = 364.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Return to Title"
flat = false

[node name="try_again_button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 341.0
margin/top = 303.0
margin/right = 621.0
margin/bottom = 365.0
custom_fonts/font = SubResource( 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Try Again"
flat = false

[node name="score_text" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 81.0
margin/right = 641.0
margin/bottom = 187.0
custom_fonts/font = SubResource( 2 )
text = "Score: 100"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="best_score_text" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 6.0
margin/top = 193.0
margin/right = 638.0
margin/bottom = 282.0
custom_fonts/font = SubResource( 3 )
text = "Best Score: 100"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="return_button" to="." method="_on_return_button_pressed"]

[connection signal="pressed" from="try_again_button" to="." method="_on_try_again_button_pressed"]


